syntax = "proto3";
package gateway.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gateway/pkg/api/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "google/protobuf/wrappers.proto";
import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/status.proto";
import "github.com/solo-io/solo-kit/api/v1/ref.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/listener_options.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/http_listener_options.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/virtual_host_options.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/route_options.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";

/*
* The **VirtualHostOption** holds `options` configuration for a VirtualHost.
* VirtualHosts can inherit `options` config from `VirtualHostOption` objects by delegating to them.
*
* When a VirtualHost delegates to an external VirtualHostOptions object, any options config
* defined on the VirtualHost will override the external options config.
* Similarly, `VirtualHostOption`s which are delegated to first will get priority over following `VirtualHostOption`s.
*
* An example configuration with a VirtualService with its own options config and delegating to two VirtualHostOption objects:
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: VirtualService
* metadata:
*   name: http
*   namespace: gloo-system
* spec:
*   virtualHost:
*     domains:
*     - '*'
*     options:
*       headerManipulation:
*         requestHeadersToRemove: ["header-from-vhost"]
*     optionsConfigRefs:
*       delegateOptions:
*         - name: virtualhost-external-options-1
*           namespace: opt-namespace
*         - name: virtualhost-external-options-2
*           namespace: opt-namespace
* ```
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: VirtualHostOption
* metadata:
*   name: virtualhost-external-options-1
*   namespace: opt-namespace
* spec:
*   options:
*     headerManipulation:
*       requestHeadersToRemove: ["header-from-external-options1"]
*     cors:
*       exposeHeaders:
*         - header-from-extopt1
*       allowOrigin:
*         - 'https://solo.io'
* ```
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: VirtualHostOption
* metadata:
*   name: virtualhost-external-options-2
*   namespace: opt-namespace
* spec:
*   options:
*     headerManipulation:
*       requestHeadersToRemove: ["header-from-external-options2"]
*     cors:
*       exposeHeaders:
*         - header-from-extopt2
*       maxAge: 2s
*       allowOrigin:
*         - 'https://solo.io'
*     transformations:
*       requestTransformation:
*         transformationTemplate:
*           headers:
*             x-header-added-in-opt2:
*               text: this header was added in the VirtualHostOption object - #2
* ```
*
* The final virtual host options (visible in the Proxy CR) would be:
* ```yaml
* spec:
*   virtualHost:
*     domains:
*     - '*'
*     options:
*       # from Virtual host options
*       headerManipulation:
*         requestHeadersToRemove: ["header-from-vhost"]
*       # from delegated virtualhost-external-options-1
*       cors:
*         exposeHeaders:
*           - header-from-extopt1
*         allowOrigin:
*           - 'https://solo.io'
*       # from delegated virtualhost-external-options-2
*       transformations:
*         requestTransformation:
*           transformationTemplate:
*             headers:
*               x-header-added-in-opt2:
*                 text: this header was added in the VirtualHostOption object - #2
* ```
*
* Notice how the order of VirtualHostOption delegations matters, and that the VirtualHost-level config overrides all delegated configs.
*/
message VirtualHostOption {

  option (core.solo.io.resource).short_name = "vhopts";
  option (core.solo.io.resource).plural_name = "virtual_host_options";

  reserved 1;

  // NamespacedStatuses indicates the validation status of this resource.
  // NamespacedStatuses is read-only by clients, and set by gateway during validation
  core.solo.io.NamespacedStatuses namespaced_statuses = 4 [(extproto.skip_hashing) = true];

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 2;

  // VirtualHost options. See VirtualHost for delegation behavior.
  gloo.solo.io.VirtualHostOptions options = 3;

  // When using Kubernetes Gateway API mode, targetRefs can be used to attach this VirtualHostOption
  // to a gateway.networking.k8s.io/Gateway object. The `options` specified will then be used
  // for all `Listeners` in the `Gateway` unless `targetRef.sectionName` is specified.
  repeated core.skv2.solo.io.PolicyTargetReferenceWithSectionName target_refs = 5;
}

/*
* The **RouteOption** holds `options` configuration for a Route.
* Routes can inherit `options` config from `RouteOption` objects by delegating to them.
*
* When a Route delegates to an external RouteOptions object, any options config
* defined on the Route will override the external options config.
* Similarly, `RouteOption`s which are delegated to first will get priority over following `RouteOption`s.
*
* An example configuration with a Route with its own options config and delegating to two RouteOption objects:
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: VirtualService
* metadata:
*   name: http
*   namespace: gloo-system
* spec:
*   virtualHost:
*     domains:
*     - '*'
*     routes:
*     - matchers:
*       - prefix: /
*       options:
*         headerManipulation:
*           requestHeadersToRemove: ["header-from-route"]
*       optionsConfigRefs:
*         delegateOptions:
*           - name: route-external-options-1
*             namespace: opt-namespace
*           - name: route-external-options-2
*             namespace: opt-namespace
* ```
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: RouteOption
* metadata:
*   name: route-external-options-1
*   namespace: opt-namespace
* spec:
*   options:
*     headerManipulation:
*       requestHeadersToRemove: ["header-from-external-options1"]
*     cors:
*       exposeHeaders:
*         - header-from-extopt1
*       allowOrigin:
*         - 'https://solo.io'
* ```
*
* ```yaml
* apiVersion: gateway.solo.io/v1
* kind: RouteOption
* metadata:
*   name: route-external-options-2
*   namespace: opt-namespace
* spec:
*   options:
*     headerManipulation:
*       requestHeadersToRemove: ["header-from-external-options2"]
*     cors:
*       exposeHeaders:
*         - header-from-extopt2
*       maxAge: 2s
*       allowOrigin:
*         - 'https://solo.io'
*     transformations:
*       requestTransformation:
*         transformationTemplate:
*           headers:
*             x-header-added-in-opt2:
*               text: this header was added in the RouteOption object - #2
* ```
*
* The final route options would bewould be:
* ```yaml
* routes:
*   - matchers:
*     - prefix: /
*     options:
*       # from Route options
*       headerManipulation:
*         requestHeadersToRemove: ["header-from-route"]
*       # from delegated route-external-options-1
*       cors:
*         exposeHeaders:
*           - header-from-extopt1
*         allowOrigin:
*           - 'https://solo.io'
*       # from delegated route-external-options-2
*       transformations:
*         requestTransformation:
*           transformationTemplate:
*             headers:
*               x-header-added-in-opt2:
*                 text: this header was added in the Route object - #2
* ```
*
* Notice how the order of RouteOption delegations matters, and that the Route-level option config overrides all delegated option configs.
*/
message RouteOption {

  option (core.solo.io.resource).short_name = "rtopts";
  option (core.solo.io.resource).plural_name = "route_options";

  reserved 1;
  // NamespacedStatuses indicates the validation status of this resource.
  // NamespacedStatuses is read-only by clients, and set by gateway during validation
  core.solo.io.NamespacedStatuses namespaced_statuses = 4 [(extproto.skip_hashing) = true];

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 2;

  // Route options. See Route for delegation behavior.
  gloo.solo.io.RouteOptions options = 3;
  
  // When using Kubernetes Gateway API mode, targetRefs can be used to attach this RouteOption
  // to a gateway.networking.k8s.io/HTTPRoute object. The `options` specified will then be used
  // for all `Rules` in the `HTTPRoute`.
  repeated core.skv2.solo.io.PolicyTargetReference target_refs = 5;
}

message ListenerOption {
  option (core.solo.io.resource).short_name = "lisopts";
  option (core.solo.io.resource).plural_name = "listener_options";

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 1;

  // Listener options
  gloo.solo.io.ListenerOptions options = 2;

  // When using Kubernetes Gateway API mode, targetRefs can be used to attach this ListenerOption
  // to a gateway.networking.k8s.io/Gateway object. The `options` specified will then be used
  // for all `Listeners` in the `Gateway` unless `targetRef.sectionName` is specified.
  repeated core.skv2.solo.io.PolicyTargetReferenceWithSectionName target_refs = 3;
}

message HttpListenerOption {
  option (core.solo.io.resource).short_name = "hlisopts";
  option (core.solo.io.resource).plural_name = "http_listener_options";

  // Metadata contains the object metadata for this resource
  core.solo.io.Metadata metadata = 1;

  // HttpListener options
  gloo.solo.io.HttpListenerOptions options = 2;

  // When using Kubernetes Gateway API mode, targetRef can be used to attach this VirtualHostOption
  // to a gateway.networking.k8s.io/Gateway object. The `options` specified will then be used
  // for all `Listeners` in the `Gateway` unless `targetRef.sectionName` is specified.
  repeated core.skv2.solo.io.PolicyTargetReferenceWithSectionName target_refs = 3;
}
